@@ -84,4 +84,9 @@ GuiState get_gui_state(void);
 void route_gui_event(GuiEvent event);
 
 void gui_rules_register_callback(GCallback callback);
+
+void gui_get_resource_pixmap(gint idx, GdkPixmap ** p, GdkBitmap ** b,
+			     GdkGC ** gcp, GdkGC ** gcb);
+gint gui_get_resource_pixmap_res(void);
+
 #endif
